# mcp-lanka-lottery

./: MCP_GUIDE.md  README.md  lottery_result_server.py  pyproject.toml
srilanka_lottery/: __init__.py  scraper.py
testing/: fecth_results.py  get_lotteries.py  test_mcp_server.py
