[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lanka-lottery-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "fastmcp>=2.13.1",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
]

[tool.setuptools.packages.find]
include = ["srilanka_lottery*"]
exclude = ["testing*"]
